# dp-nlp-category-api

./: .audit-ignore  .gitignore  .safety-policy.yml  Dockerfile  Dockerfile.concourse  Makefile  README.md  gunicorn_config.py  pyproject.toml
category_api/: routes.py  server.py
category_api/scripts/: category_cli.py
ci/: audit.yml  build.yml  component.yml  lint.yml  unit.yml
